--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pandas = "^1.1.5"
 plotly = "^4.14.1"
 Django = "^3.1.4"
 requests = "^2.25.0"
+django-bootstrap4 = "^2.3.1"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.2"
