--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ plotly = "^4.14.1"
 Django = "^3.1.4"
 requests = "^2.25.0"
 django-bootstrap4 = "^2.3.1"
+google-cloud-bigquery = "^2.6.1"
+pandas-gbq = "^0.14.1"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.2"
