--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ requests = "^2.25.0"
 django-bootstrap4 = "^2.3.1"
 google-cloud-bigquery = "^2.6.1"
 pandas-gbq = "^0.14.1"
+gunicorn = "^20.0.4"
+django-heroku = "^0.3.1"
+whitenoise = "^5.2.0"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.2"
