--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ pandas-gbq = "^0.14.1"
 gunicorn = "^20.0.4"
 django-heroku = "^0.3.1"
 whitenoise = "^5.2.0"
+pylibmc = "1.5.2"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "^3.2"
