--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,45 @@
-asgiref==3.3.1; python_version >= "3.6" and python_version < "4.0"
-beautifulsoup4==4.9.3; python_version >= "3.6" and python_version < "4.0"
-cachetools==4.2.0; python_version >= "3.5" and python_version < "4.0" and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5")
-certifi==2020.12.5; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-cffi==1.14.4; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-chardet==3.0.4; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+asgiref==3.3.1
+beautifulsoup4==4.9.3
+cachetools==4.2.0
+certifi==2020.12.5
+cffi==1.14.4; python_version >= "3.5"
+chardet==3.0.4
 dj-database-url==0.5.0
-django-bootstrap4==2.3.1; python_version >= "3.6" and python_version < "4.0"
+django==3.1.4
+django-bootstrap4==2.3.1
 django-heroku==0.3.1
-django==3.1.4; python_version >= "3.6"
-google-api-core==1.24.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-google-auth-oauthlib==0.4.2; python_version >= "3.6"
-google-auth==1.24.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-google-cloud-bigquery-storage==2.1.0; python_version >= "3.6"
-google-cloud-bigquery==2.6.1; python_version >= "3.6"
-google-cloud-core==1.5.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-google-crc32c==1.1.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-google-resumable-media==1.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-googleapis-common-protos==1.52.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-grpcio==1.34.0; python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
-gunicorn==20.0.4; python_version >= "3.4"
-idna==2.10; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-libcst==0.3.15; python_version >= "3.6"
-mypy-extensions==0.4.3; python_version >= "3.6"
+google-api-core==1.24.0
+google-auth==1.24.0
+google-auth-oauthlib==0.4.2
+google-cloud-bigquery==2.6.1
+google-cloud-core==1.5.0
+google-crc32c==1.1.0; python_version >= "3.5"
+google-resumable-media==1.2.0
+googleapis-common-protos==1.52.0
+grpcio==1.34.0
+gunicorn==20.0.4
+idna==2.10
 numpy==1.19.4
-oauthlib==3.1.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pandas-gbq==0.14.1; python_version >= "3.5"
-pandas==1.1.5; python_full_version >= "3.6.1"
+oauthlib==3.1.0
+pandas==1.1.5
+pandas-gbq==0.14.1
 plotly==4.14.1
-proto-plus==1.13.0; python_version >= "3.6"
-protobuf==3.14.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-psycopg2==2.8.6; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0"
-pyarrow==2.0.0; python_version >= "3.6"
-pyasn1-modules==0.2.8; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-pyasn1==0.4.8; python_version >= "3.5" and python_full_version < "3.0.0" and python_version < "4" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_full_version >= "3.6.0" and python_version >= "3.5" and python_version < "4" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
-pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-pydata-google-auth==1.1.0; python_version >= "3.5"
-python-dateutil==2.8.1; python_version >= "3.6" and python_full_version >= "3.6.1"
-pytz==2020.4; python_full_version >= "3.6.1" and python_version >= "3.6" and python_version < "4.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
-pyyaml==5.3.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.5.0"
-requests-oauthlib==1.3.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-requests==2.25.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+proto-plus==1.13.0
+protobuf==3.14.0
+psycopg2==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20; python_version >= "3.5"
+pydata-google-auth==1.1.0
+pylibmc==1.5.2
+python-dateutil==2.8.1
+pytz==2020.4
+requests==2.25.0
+requests-oauthlib==1.3.0
 retrying==1.3.3
-rsa==4.6; python_version >= "3.5" and python_version < "4" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
-six==1.15.0; python_full_version >= "3.6.1" and python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.3.0") and (python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5")
-soupsieve==2.1; python_version >= "3.6" and python_version < "4.0"
-sqlparse==0.4.1; python_version >= "3.6" and python_version < "4.0"
-typing-extensions==3.7.4.3; python_version >= "3.6"
-typing-inspect==0.6.0; python_version >= "3.6"
-urllib3==1.26.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
-whitenoise==5.2.0; python_version >= "3.5" and python_version < "4"
+rsa==4.6; python_version >= "3.6"
+six==1.15.0
+soupsieve==2.1; python_version >= "3.0"
+sqlparse==0.4.1
+urllib3==1.26.2
+whitenoise==5.2.0
